--- a/Articles/VECM/Introduction.org
+++ b/Articles/VECM/Introduction.org
@@ -23,16 +23,18 @@ Despite the late interest in those expenditures cites:freitas_pattern_2013,girar
 The importance of non-residential investment for economic growth is a commonplace among heterodox economists.
 As a consequence, the relevance of others expenditures on macroeconomic dynamics has been underestimated cite:brochier_macroeconomics_2017.
 After the subprime crisis (2008) and the Great Recession (2008-2009) this landscape has changed.
-More recently, other expenditures have been scrutinized under the demand-led growth agenda cites:freitas_pattern_2013,girardi_long-run_2016,girardi_autonomous_2018,braga_investment_2018.
-However, few studies focus on the role of residential investment in particular cite:petrini_2021_TD.
+The Sraffian supermultiplier (SSM) model presented by textcite:serrano_long_1995 establishes a prominent role for non-capacity creating autonomous expenditures in the theoretical ground.
+More recently, those expenditures have been scrutinized under the demand-led growth agenda cites:freitas_pattern_2013,girardi_long-run_2016,girardi_autonomous_2018,braga_investment_2018.
+However, few studies focus on financial determinants of the autonomous expenditures or on the role of residential investment in particular cites:petrini_2021_TD,brochier_supermultiplier_2018.
+This paper aims to contribute to this gap.
 
 We argue that the scarce attention that residential investment receives is not compatible with its macroeconomic relevance.
 Besides the recent interest in the macroeconomic consequences of residential investment to the business cycle and long-run economic growth cite:fiebiger_trend_2017,fiebiger_semi-autonomous_2018,perez_Montiel_2021, there is not a consensus about its determinants.
 
-Our main objective is to present and evaluate a parsimonious way of explaining the behavior residential investment growth rate, focusing on the US case (1992-2019).
-We will base this explanation on a single index that combines two relevant variables of the housing market: mortgages rate of interest and house price inflation.
-In Section ref:sec:Stylized_Facts, we discuss the macroeconomic relevance of residential investment regarding the US case.
-Next, in Section ref:sec:empirical_review, we review works that estimates the determinants of residential investment.
+Our main objective is to present and evaluate a parsimonious way of explaining the behavior of the residential investment growth rate, focusing on the US case (1992-2019).
+We will base this explanation on a single index that combines two relevant variables of the housing market: mortgage rate of interest and house price inflation.
+In Section ref:sec:Stylized_Facts, we present some stylezed facts and discuss the macroeconomic relevance of residential investment regarding the US case.
+Next, in Section ref:sec:empirical_review, we review empirical works that estimate the determinants of residential investment.
 In Section ref:sec:VECM, we estimate a bi-variate vector error-correction model (VECM) using time-series data for the US economy from 1992 to 2019 and present the results.
 Section ref:sec:Conclusion concludes the paper.
 The results of our investigation indicate the relevance of the proposed index in explaining the dynamics of the growth rate of residential investment.
