--- a/Articles/VECM/tabs/robust.tex
+++ b/Articles/VECM/tabs/robust.tex
@@ -14,7 +14,7 @@
   \multicolumn{2}{c|}{\textbf{\begin{tabular}[c]{@{}c@{}}Reject $H_0$ for\\ ARCH-LM test?\\ (Homoscedasticity)\end{tabular}}} &
   \multirow{2}{*}{\textbf{\begin{tabular}[c]{@{}c@{}}Reject $H_0$ for\\ Jarque-Bera test?\\ (Normality)\end{tabular}}} &
   \multicolumn{2}{c|}{\textbf{\begin{tabular}[c]{@{}c@{}}Reject $H_0$\\ for KPSS \\ Stationarity test?\end{tabular}}} &
-  \multirow{2}{*}{\textbf{\begin{tabular}[c]{@{}c@{}}Expected\\ results\end{tabular}}} \\ \cline{4-5} \cline{7-8}
+  \multirow{2}{*}{\textbf{\begin{tabular}[c]{@{}c@{}}Confirmed\\hypothesis\end{tabular}}} \\ \cline{4-5} \cline{7-8}
    &                &     & \textbf{$g_{I_h}$} & \textbf{$own$} &     & \textbf{$g_{I_h}$} & \textbf{$own$} &                       \\ \hline\hline
 0  & BIC            & yes & yes                & yes            & yes & no                 & no             & 1,2, 3 and 5          \\
 1  & $-$            & yes & no                 & yes            & yes & no                 & no             & all                   \\
