--- a/Articles/VECM/tabs/hypothesis.tex
+++ b/Articles/VECM/tabs/hypothesis.tex
@@ -5,9 +5,10 @@
 	\caption{Summary of expected results of the macroeconometric model}
 	\label{resultados_esperados}
 	\resizebox{\textwidth}{!}{%
+	\begin{threeparttable}
 		\begin{tabular}{l|l|l}
 			\hline\hline
-			\textbf{\begin{tabular}[c]{@{}l@{}}Expected\\ Result\end{tabular}} &
+			\textbf{\begin{tabular}[c]{@{}l@{}}Expected\\ Result\tnote{a}\end{tabular}} &
 			\textbf{Econometric Meaning} &
 			\textbf{Economic Meaning} \\ \hline\hline
 			\textbf{1. $\varepsilon \sim I(0)$} &
@@ -18,15 +19,15 @@
 				$own$ dynamics is not affected\\by previous equilibrium deviation\end{tabular}
 			\\ \hline
 			\textbf{3. $\alpha_2 < 0$} &
-			\begin{tabular}[c]{@{}l@{}}houses own-rate of interest Granger-causes\\
-				residential investment growth rate\end{tabular} & \begin{tabular}[c]{@{}l@{}} $g_{I_h}$ dynamics is affected\\ by previous equilibrium deviation\end{tabular}
+			\begin{tabular}[c]{@{}l@{}}residential investment growth rate is not weakly exogenous\\
+				compared to houses-own rate of interest\end{tabular} & \begin{tabular}[c]{@{}l@{}} $g_{I_h}$ dynamics is affected\\ by previous equilibrium deviation\end{tabular}
 			\\ \hline
-			\textbf{4. $\phi_1 > 0$} &
+			\textbf{4. $\phi_1 < 0$} &
 			\begin{tabular}[c]{@{}l@{}}Series share a common\\negative long-run relationship\end{tabular} &
 			\begin{tabular}[c]{@{}l@{}}houses own-rate of interest affects\\residential investment growth rate negatively\end{tabular} \\ \hline
-			\textbf{5. $\phi_0 < 0$} &
+			\textbf{5. $\phi_0 > 0$} &
 			\begin{tabular}[c]{@{}l@{}}
-			Real estate demand for non-speculation\\reasons is statistically significant
+			Non price related real estate\\demand is statistically significant
 			\end{tabular} &
 			\begin{tabular}[c]{@{}l@{}}
 				Real estate demand associated with\\institutional particularities and demographic\\ changes affects residential investment\\growth rate positively\end{tabular} \\ \hline
@@ -39,6 +40,10 @@
 			\begin{tabular}[c]{@{}l@{}}
 				$g_{I_h}$ effects over houses own-rate of\\interest are negligible\end{tabular} \\ \hline\hline
 		\end{tabular}%
+		\begin{tablenotes}\footnotesize
+		  \item [a] In the estimation results provided in Table \ref{tab:Estimacao} both $\phi_0$ and $\phi_1$ should be interpreted with the opposite sign reported here.
+\end{tablenotes}
+	  	\end{threeparttable}
 	}
 \caption*{\textbf{Source:} Authors' elaboration}
 \end{table}
